#Update the previous classes with the proper json objects #Add: new class Wrapper #Update: Minor changes #Clean repro : Deleted all the previous classes from last project

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
 			<version>0.9.12</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20201115</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
