--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.montserrat14</groupId>
-	<artifactId>systemoptimizer</artifactId>
+	<artifactId>schedulingoptimizer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>systemoptimizer</name>
-	<description>Backend for system optimizer</description>
+	<name>schedulingoptimizer</name>
+	<description>Backend for scheduling optimizer</description>
 
 	<properties>
 		<java.version>11</java.version>
